# tokensmith-python-figma

./: .gitignore  LICENSE  README.md  pyproject.toml  tokensmith.toml.example
.github/workflows/: ci.yml
src/tokensmith/: __init__.py  cli.py  config.py  diff.py  figma_client.py  models.py
src/tokensmith/exporters/: __init__.py  css.py  tailwind.py  typescript.py
tests/: conftest.py  test_diff.py  test_exporters.py  test_figma_client.py
tests/fixtures/: variables_local.json
